--- a/_config.yaml
+++ b/_config.yaml
@@ -5,24 +5,5 @@ description: "My notes about CS and AI courses / explorations."
 url: "https://owencalstroy.github.io"
 baseurl: "/CSnAI-notes"
 
-
-# 主题配置
-theme: jekyll-theme-minimal
-
-# 构建配置
-markdown: kramdown
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
-
-# 插件配置
-plugins:
-  - jekyll-feed
-  - jekyll-seo-tag
-
-# 排除文件
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - node_modules
-  - vendor
+# 博客文章存放在_posts目录中
+theme: jekyll-theme-freelancer      # 你可以选择使用已有的主题或自己编写模板
