--- a/_config.yaml
+++ b/_config.yaml
@@ -5,6 +5,16 @@ description: "My notes about CS and AI courses / explorations."
 url: "https://owencalstroy.github.io"
 baseurl: "/CSnAI-notes"
 
+site_name: CSnAI Blog
+site_url: https://csnai.blog/
+site_author: Calscatt
+site_description: >-
+  CSnAI-notes 是一个记录自学过程的博客，主要包括计算机科学和人工智能的学习笔记。
+
+repo_name: CSnAI-notes
+repo_url: https://github.com/OwenCalstroy/CSnAI-notes/
+
+
 theme:
   name: material
   language: zh
