--- a/_config.yaml
+++ b/_config.yaml
@@ -1,13 +1,13 @@
 # _config.yml
 # Configuration file for CSnAI Blog
 site_name: CSnAI Blog
-site_url: https://csnai.blog/
+site_url: "https://csnai.blog/
 site_author: Calscatt
-site_description: >-
+site_description: >
   CSnAI-notes 是一个记录自学过程的博客，主要包括计算机科学和人工智能的学习笔记。
 
 repo_name: CSnAI-notes
-repo_url: https://github.com/OwenCalstroy/CSnAI-notes/
+repo_url: "https://github.com/OwenCalstroy/CSnAI-notes/
 
 email: weiyichen21@163.com
 author: Calscatt
@@ -66,18 +66,15 @@ plugins:
           default: true
           name: 简体中文
           build: true
+          site_name: CSnAI Blog
         - locale: en
           name: English
           build: true
           site_name: csnai.blog
-          nav_translations:
-            LLM
-            C++ Books
-        - en
-  - git-revision-date:
+  - git-revision-date
   - minify:
       minify_html: true
-  - open-in-new-tab:
+  - open-in-new-tab
 
 
 nav:
@@ -88,19 +85,18 @@ nav:
   - C++ Books:
       - Introduction: "cpp_books/introduction.md"
       - Contents:
-          - The C++ Standard Library: 
-              - Chap 2: C++ 及其标准程序库简介: "doc/cpp_books/cpp_stl/ch2.md"
-              - Chap 3: 一般概念: "doc/cpp_books/cpp_stl/ch3.md"
-              - Chap 4: 通用工具: "doc/cpp_books/cpp_stl/ch4.md"
-              - Chap 5: Standard Template Library: "doc/cpp_books/cpp_stl/ch5.md"
-              - Chap 6: STL 容器: "doc/cpp_books/cpp_stl/ch6.md"
-              - Chap 7: STL 迭代器: "doc/cpp_books/cpp_stl/ch7.md"
-              - Chap 8: STL 仿函数: "doc/cpp_books/cpp_stl/ch8.md"
-              - Chap 9: STL 算法: "doc/cpp_books/cpp_stl/ch9.md"
-              - Chap 10: 特殊容器: "doc/cpp_books/cpp_stl/ch10.md"
-              - Chap 11: Strings: "doc/cpp_books/cpp_stl/ch11.md"
-              - Chap 12: Numerics: "doc/cpp_books/cpp_stl/ch12.md"
-              - Chap 13: 以 Stream Classes 完成输入和输出: "doc/cpp_books/cpp_stl/ch13.md"
-              - Chap 14: 国际化: "doc/cpp_books/cpp_stl/ch14.md"
-              - Chap 15: Allocator: "doc/cpp_books/cpp_stl/ch15.md"
-
+          - The C++ Standard Library:
+              - Chap 2: C++ 及其标准程序库简介: "doc/cpp_books/cpp_stl/ch1.md"
+              - Chap 3: 一般概念: "doc/cpp_books/cpp_stl/ch2.md"
+              - Chap 4: 通用工具: "doc/cpp_books/cpp_stl/ch3.md"
+              - Chap 5: Standard Template Library: "doc/cpp_books/cpp_stl/ch4.md"
+              - Chap 6: STL 容器: "doc/cpp_books/cpp_stl/ch5.md"
+              - Chap 7: STL 迭代器: "doc/cpp_books/cpp_stl/ch6.md"
+              - Chap 8: STL 仿函数: "doc/cpp_books/cpp_stl/ch7.md"
+              - Chap 9: STL 算法: "doc/cpp_books/cpp_stl/ch8.md"
+              - Chap 10: 特殊容器: "doc/cpp_books/cpp_stl/ch9.md"
+              - Chap 11: Strings: "doc/cpp_books/cpp_stl/ch10.md"
+              - Chap 12: Numerics: "doc/cpp_books/cpp_stl/ch11.md"
+              - Chap 13: 以 Stream Classes 完成输入和输出: "doc/cpp_books/cpp_stl/ch12.md"
+              - Chap 14: 国际化: "doc/cpp_books/cpp_stl/ch13.md"
+              - Chap 15: Allocator: "doc/cpp_books/cpp_stl/ch14.md"
